# hpc-labo7

./: .gitignore  CMakeLists.txt  README.md  report.md
inputs/: pi.txt
outputs/: out_mt.txt  time_mono_k1.txt  time_mono_k10.txt  time_mono_k3.txt  time_mono_k5.txt  time_mono_k7.txt  time_mt_k3_t1.txt  time_mt_k3_t2.txt  time_mt_k3_t4.txt  time_mt_k3_t8.txt  time_mt_k7_t1.txt  time_mt_k7_t2.txt  time_mt_k7_t4.txt  time_mt_k7_t8.txt
src/: main_monothread.c  main_multithread.c
